2006-07-28  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

==================== 2.12.4 ====================

2006-07-27  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2006-07-27  Alexander Larsson  <alexl@redhat.com>

	* admin-tool/aboutdialog.py:
	* admin-tool/changeswindow.py:
	* admin-tool/editorwindow.py:
	* admin-tool/fileviewer.py:
	* admin-tool/gconfviewer.py:
	* admin-tool/lockdownappliersabayon.py:
	* admin-tool/profilesdialog.py:
	* admin-tool/saveconfirm.py:
	* admin-tool/sessionwidget.py:
	* admin-tool/sessionwindow.py:
	* admin-tool/usersdialog.py:
	* lib/cache.py:
	* lib/dirmonitor.py:
	* lib/mozilla_bookmarks.py:
	* lib/protosession.py:
	* lib/sources/filessource.py:
	* lib/sources/gconfsource.py:
	* lib/sources/mozillasource.py:
	* lib/sources/paneldelegate.py:
	* lib/sources/testsource.py:
	* lib/storage.py:
	* lib/userdb.py:
	* lib/usermod.py:
	* lib/userprofile.py:
	* lib/util.py:
	Remove unneeded #! from python files

2006-04-28  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Use po/LINGUAS (#338011)
	Patch from Przemyslaw Grzegorczyk
	 
2006-04-23  Kjartan Maraas <kmaraas@gnome.org>

	* configure.ac: Unbreak the build.

2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.ac: Remove obsolete entry for no_NO
	* po/no.po: And the translation.

2006-04-18  Vladimer Sichinava  <alinux@siena.linux.it>

        * configure.ac: Added "ka" (Georgian) to ALL_LINGUAS

2006-04-11  William Lachance  <wrlach@gmail.com>

	* lib/config.py.in: Fix breakage.
	
2006-04-05  Pema Geyleg  <pema.geyleg@gmail.com>

	* configure.ac: Added dz (Dzongkha) to ALL_LINGUAS.

2006-03-31  Rhys Jones  <rhys@sucs.org>

	* configure.ac: Added Welsh (cy) to ALL_LINGUAS.

2006-03-22  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Add support for Frugalware Linux
	Patch from Alex Smith <alex.extreme2@gmail.com>

2006-03-13  Rajesh Ranjan  <rranjan@redhat.com>
